argocd/apps/fmd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: fmd
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: fmd-server
          image: registry.gitlab.com/fmd-foss/fmd-server:0.17.0
          volumeMounts:
            - name: data
              mountPath: /var/lib/fmd-server/db
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
