argocd/apps/fmd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: fmd
spec:
  selector:
    app: server
  ports:
    - port: 8080
